<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/theme"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:id = "@+id/li">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/light"/>

        <RadioButton
            android:id = "@+id/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:layout_gravity="center_vertical|end"/>

    </FrameLayout>

    <View
        android:background="@color/divider"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:id = "@+id/ni">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/dark"/>

        <RadioButton
            android:id = "@+id/night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:layout_gravity="center_vertical|end"/>

    </FrameLayout>

</LinearLayout>