<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/playlist"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:id = "@+id/add">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/add_new_playlist"/>


    </FrameLayout>

    <View
        android:background="@color/divider"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:id = "@+id/edit">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/rename"/>

    </FrameLayout>

    <View
        android:background="@color/divider"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:id = "@+id/delete">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/delete"/>

    </FrameLayout>

</LinearLayout>